[lworld] ShouldNotReachHere() error in ObjectSynchronizer::FastHashCode

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/cd627e65-f015-4fb1-a1d2-b6c9b8127f98-S947/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/01de5dd0-c233-4a6e-8a68-390242067104/runs/a8936e98-b142-4cc5-917e-1d414874cfe4/workspace/open/src/hotspot/share/runtime/synchronizer.cpp:945), pid=1275159, tid=1275176
      # Error: ShouldNotReachHere()
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-06-21-1247431.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-06-21-1247431.tobias.hartmann.valhalla, mixed mode, tiered, compressed class ptrs, z gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x16220cc] ObjectSynchronizer::FastHashCode(Thread*, oop)+0x958

      Stack: [0x0000ffff94675000,0x0000ffff94873000], sp=0x0000ffff94870970, free space=2030k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x16220cc] ObjectSynchronizer::FastHashCode(Thread*, oop)+0x958 (synchronizer.cpp:945)
      V [libjvm.so+0x13819a8] oopDesc::slow_identity_hash()+0x88 (oop.cpp:112)
      V [libjvm.so+0x10e9a04] JvmtiTagMapTable::remove(oop)+0x274 (oop.inline.hpp:381)
      V [libjvm.so+0x10e22d0] CallbackWrapper::~CallbackWrapper()+0x140 (jvmtiTagMap.cpp:248)
      V [libjvm.so+0x10e0358] IterateThroughHeapObjectClosure::do_object(oop)+0x518 (jvmtiTagMap.cpp:1089)
      V [libjvm.so+0x17d62e4] void XHeapIterator::visit_and_follow<true>(XHeapIteratorContext const&, ObjectClosure*, oop)+0x54 (xHeapIterator.cpp:379)
      V [libjvm.so+0x17d66c0] void XHeapIterator::drain<true>(XHeapIteratorContext const&, ObjectClosure*)+0x120 (xHeapIterator.cpp:396)
      V [libjvm.so+0x17ced20] XHeapIterator::object_iterate(ObjectClosure*, unsigned int)+0xbc (xHeapIterator.cpp:420)
      V [libjvm.so+0x17cbf54] XHeap::object_iterate(ObjectClosure*, bool)+0x74 (xHeap.cpp:457)
      V [libjvm.so+0x10e37d0] VM_HeapIterateOperation::doit()+0x80 (jvmtiTagMap.cpp:877)
      V [libjvm.so+0x174c2b0] VM_Operation::evaluate()+0x120 (vmOperations.cpp:71)
      V [libjvm.so+0x17778f0] VMThread::evaluate_operation(VM_Operation*)+0xd0 (vmThread.cpp:281)
      V [libjvm.so+0x1778428] VMThread::inner_execute(VM_Operation*)+0x3b8 (vmThread.cpp:435)
      V [libjvm.so+0x177862c] VMThread::loop()+0x8c (vmThread.cpp:502)
      V [libjvm.so+0x177875c] VMThread::run()+0x9c (vmThread.cpp:175)
      V [libjvm.so+0x166e174] Thread::call_run()+0xb0 (thread.cpp:217)
      V [libjvm.so+0x13b4980] thread_native_entry(Thread*)+0x130 (os_linux.cpp:778)
      C [libpthread.so.0+0x7908] start_thread+0x188

            Assignee:
            Coleen Phillimore
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: