8310655: [lworld] ShouldNotReachHere() error in ObjectSynchronizer::FastHashCode